...
            TopAppBar(
                title = { Text("Favorite Books") },
                actions = {
                    IconButton(onClick = onAddBook) {
                        Icon(
                            painter = painterResource(id = R.drawable.add),
                            contentDescription = "Add Book"
                        )
                    }
                }
            )
        },
        modifier = Modifier.fillMaxSize()
...
